# l2r

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .test-env  CONTRIBUTING.md  Dockerfile-integration-tests  Makefile  README.md  instructions.txt  pyproject.toml  requirements.txt
.github/workflows/: autopep8.yml  flake8.yml  lint.yml  unittest.yml
datasets/: README.md  img_viewer.py  torch_encoder.py
datasets/lvms/: lvms_0.npz  lvms_1.npz  lvms_10.npz  lvms_100.npz  lvms_1000.npz  lvms_1001.npz  lvms_1002.npz  lvms_1003.npz  lvms_1004.npz  lvms_1005.npz  lvms_1006.npz  lvms_1007.npz  lvms_1008.npz  lvms_1009.npz  lvms_101.npz  lvms_1010.npz  lvms_1011.npz  lvms_1012.npz  lvms_1013.npz  lvms_1014.npz  lvms_1015.npz  lvms_1016.npz  lvms_1017.npz  lvms_1018.npz  lvms_1019.npz  lvms_102.npz  lvms_1020.npz  lvms_1021.npz  lvms_1022.npz  lvms_1023.npz  lvms_1024.npz  lvms_1025.npz  lvms_1026.npz  lvms_1027.npz  lvms_1028.npz  lvms_1029.npz  lvms_103.npz  lvms_1030.npz  lvms_1031.npz  lvms_1032.npz  (+4960 more)
datasets/thruxton/: thruxton_0.npz  thruxton_1.npz  thruxton_10.npz  thruxton_100.npz  thruxton_1000.npz  thruxton_1001.npz  thruxton_1002.npz  thruxton_1003.npz  thruxton_1004.npz  thruxton_1005.npz  thruxton_1006.npz  thruxton_1007.npz  thruxton_1008.npz  (+4987 more)
deprecated/: base_architecture.py  utils.py
docs/: README.md
l2r/: __init__.py  build.py  constants.py  run.bash
middleware/: connection.py  middleware.py  run_arrival_middleware.py
results/: get_results.py  graph_results.py  l2r_demo.txt
ros/: README.md
test/: test_build.py
(+141 files in other folders)
